tests/snapshots/yaml_suite_snapshots__yaml_suite_K527_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.6. Line Folding
  from: "http://www.yaml.org/spec/1.2/spec.html#id2779289"
  tags: folded spec whitespace scalar 1.3-err
  yaml: ">-\n  trimmed\n␣␣\n␣\n\n  as\n  space\n"
  tree: "+STR\n +DOC\n  =VAL >trimmed\\n\\n\\nas space\n -DOC\n-STR\n"
  json: "\"trimmed\\n\\n\\nas space\"\n"
  dump: ">-\n  trimmed\n\n\n\n  as space\n"
