tests/snapshots/yaml_suite_snapshots__yaml_suite_K527_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ">-\n  trimmed\n\n\n\n  as space\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2779289"
  json: "\"trimmed\\n\\n\\nas space\"\n"
  name: Spec Example 6.6. Line Folding
  tags: folded spec whitespace scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL >trimmed\\n\\n\\nas space\n -DOC\n-STR\n"
  yaml: ">-\n  trimmed\n␣␣\n␣\n\n  as\n  space\n"
