tests/snapshots/yaml_suite_snapshots__yaml_suite_K54U_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Tab after document header
  from: "@perlpunk"
  tags: header whitespace
  yaml: "---»scalar\n"
  tree: "+STR\n +DOC ---\n  =VAL :scalar\n -DOC\n-STR\n"
  json: "\"scalar\"\n"
  dump: "--- scalar\n...\n"
