tests/snapshots/yaml_suite_snapshots__yaml_suite_K54U_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- scalar\n...\n"
  from: "@perlpunk"
  json: "\"scalar\"\n"
  name: Tab after document header
  tags: header whitespace
  tree: "+STR\n +DOC ---\n  =VAL :scalar\n -DOC\n-STR\n"
  yaml: "---»scalar\n"
