tests/snapshots/yaml_suite_snapshots__yaml_suite_KH5V_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "@ingydotnet"
  json: "\"1 inline\\ttab\"\n"
  name: Inline tabs in double quoted
  tags: double whitespace
  tree: "+STR\n +DOC\n  =VAL \"1 inline\\ttab\n -DOC\n-STR\n"
  yaml: "\"1 inline\\ttab\"\n"
- dump: "\"2 inline\\ttab\"\n"
  json: "\"2 inline\\ttab\"\n"
  tree: "+STR\n +DOC\n  =VAL \"2 inline\\ttab\n -DOC\n-STR\n"
  yaml: "\"2 inline\\——»tab\"\n"
- dump: "\"3 inline\\ttab\"\n"
  json: "\"3 inline\\ttab\"\n"
  tree: "+STR\n +DOC\n  =VAL \"3 inline\\ttab\n -DOC\n-STR\n"
  yaml: "\"3 inline———»tab\"\n"
